--- a/css/skills.css
+++ b/css/skills.css
@@ -2,7 +2,6 @@
 .portfolio-skill {
   max-width: 100%;
   padding: 5rem 0 5rem;
-  overflow: hidden;
 }
 
 .ps-title {
